create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -541,7 +541,7 @@ a:hover {
   font-size: 23px;
 }
 #pricing-table3-2 .mbr-section__container .mbr-section-title B {
-  color: #2b4484;
+  color: #742282;
 }
 #pricing-table3-2 .mbr-plan-price-desc {
   text-align: left;
